@@ -261,6 +261,7 @@ describe('vim.ui_attach', function()
         lled in a fast event context            |
         {1:~                                       }|
       ]],
+      cmdline = { { abort = false } },
       messages = {
         {
           content = { { 'E122: Function Foo already exists, add ! to replace it', 9, 6 } },
@@ -278,6 +279,7 @@ describe('vim.ui_attach', function()
         Y)?                                     |
         {1:~                                       }|
       ]],
+      cmdline = { { abort = false } },
       messages = {
         {
           content = { { 'replace with Replacement (y/n/a/q/l/^E/^Y)?', 6, 18 } },
@@ -294,6 +296,7 @@ describe('vim.ui_attach', function()
         e mouse (q or empty cancels):           |
         {1:^~                                       }|
       ]],
+      cmdline = { { abort = false } },
       messages = {
         {
           content = { { 'Select:\nOne\nTwo\n' } },
@@ -359,6 +362,7 @@ describe('vim.ui_attach', function()
         {9:back from ns: 1.}                        |
         {100:Press ENTER or type command to continue}^ |
       ]],
+      cmdline = { { abort = false } },
     })
     feed('<cr>')
     -- Also when scheduled
